  19 Jan 2005; Preston Cody <codeman@gentoo.org>
  Added Group Membership for additional_users and fixed a [ instead of ( bug.

  15 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
  Commented out first while loop in install portion.

  14 Jan 2005; Preston Cody <codeman@gentoo.org>
  simple [ instead of { bug.

  07 Jan 2005; Preston Cody <codeman@gentoo.org>
  Added grp_install and services and fixed extra_packages to dialogfe

  05 Jan 2005; Preston Cody <codeman@gentoo.org>
  Initial ChangeLog commit. Getting the FE to interact with the CC correctly
  lots of issues still to be resolved here.  also added a README