@@ -6,6 +6,7 @@ If you are working or plan to work on a task here put your name by it.
 Things still needing to be done for the ALPHA release (on experimental livecd):
 	Backend:
 		Add custom kernel code. (codeman)
+		Fix bootloader code for udev. (codeman)
 		Make sure partitioning somewhat works. (agaffney)
 	DialogFE:
 		Add networking setup for CC <whisper>samyron</whisper>
