@@ -1,3 +1,11 @@
+# ChangeLog for Gentoo Linux Installer
+# Copyright 2005 Gentoo Technologies, Inc.
+
+dialogfe (05 Jan 2005):
+  
+  22 Jan 2005; Preston Cody <codeman@gentoo.org>
+  Finished initital coding of additional_users.
+
   19 Jan 2005; Preston Cody <codeman@gentoo.org>
   Added Group Membership for additional_users and fixed a [ instead of ( bug.
 
